--- a/cas4/cas4.cbp
+++ b/cas4/cas4.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,11 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Datum.h" />
+		<Unit filename="include/ListaDatuma.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Datum.cpp" />
+		<Unit filename="src/ListaDatuma.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
